# QuickClose

./: .gitignore  Cargo.toml  README.md  build.rs
src/: hook.rs  keys.rs  main.rs  tray.rs
