[package]
name = "QuickClose"
version = "0.1.0"
edition = "2024"

[features]
no_console = []

[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }